# varys

./: .gitignore  CHANGELOG.md  INSTALL.md  LICENSE  README.md  deploy.sh  package.json  pyproject.toml  requirements.txt  tsconfig.json
.cursor/rules/: deploy-and-commit.mdc
docs/: ollama-setup.md  pipeline-streaming-explained.md
documentation/: feature-llm-cell-tagging.md  wiki.html
jupyter-config/jupyter_server_config.d/: varys.json
lib/: icon.d.ts  icon.d.ts.map  icon.js  icon.js.map  index.d.ts  index.d.ts.map  index.js  index.js.map
lib/api/: client.d.ts  client.d.ts.map  client.js  client.js.map
lib/completion/: InlineCompletionProvider.d.ts  InlineCompletionProvider.d.ts.map  InlineCompletionProvider.js  InlineCompletionProvider.js.map  index.d.ts  index.d.ts.map  index.js  index.js.map
lib/context/: NotebookReader.d.ts  NotebookReader.d.ts.map  NotebookReader.js  NotebookReader.js.map  VariableResolver.d.ts  VariableResolver.d.ts.map  VariableResolver.js  VariableResolver.js.map
lib/editor/: CellEditor.d.ts  CellEditor.d.ts.map  CellEditor.js  CellEditor.js.map
lib/outputs/: outputOverlay.d.ts  outputOverlay.d.ts.map  outputOverlay.js  outputOverlay.js.map
lib/reproducibility/: ReproPanel.d.ts  ReproPanel.d.ts.map  ReproPanel.js  ReproPanel.js.map  store.d.ts  store.d.ts.map  store.js  store.js.map  types.d.ts  types.d.ts.map  types.js.map
lib/sidebar/: SidebarWidget.d.ts  SidebarWidget.d.ts.map  SidebarWidget.js  SidebarWidget.js.map
lib/tags/: TagsPanel.d.ts  TagsPanel.d.ts.map  TagsPanel.js  TagsPanel.js.map  cellTagOverlay.d.ts  cellTagOverlay.d.ts.map  cellTagOverlay.js  cellTagOverlay.js.map
lib/ui/: ActionBar.d.ts  ActionBar.js  ActionBar.js.map  DiffView.d.ts  DiffView.d.ts.map  DiffView.js  DiffView.js.map
lib/utils/: diffUtils.d.ts  diffUtils.d.ts.map  diffUtils.js  diffUtils.js.map
src/: icon.ts  index.ts
src/api/: client.ts
src/completion/: InlineCompletionProvider.ts  index.ts
src/context/: NotebookReader.ts  VariableResolver.ts
src/editor/: CellEditor.ts
src/outputs/: outputOverlay.ts
src/reproducibility/: ReproPanel.tsx  store.ts  types.ts
src/sidebar/: SidebarWidget.tsx
src/tags/: TagsPanel.tsx  cellTagOverlay.ts
src/ui/: ActionBar.tsx  DiffView.tsx
src/utils/: diffUtils.ts
style/: base.css  index.css  index.js
varys/: __init__.py  _version.py  app.py  debug_logger.py  image_processing.py  magic.py
varys/builtin_tools/: __init__.py  mcp_sequential_thinking.py
varys/bundled_config/: completion.cfg  llm.cfg  rag.cfg  reproducibility.cfg
varys/bundled_skills/code_style/: README.md  SKILL.md
varys/bundled_skills/dataframe-context/: README.md  SKILL.md
varys/bundled_skills/eda/: README.md  SKILL.md
varys/bundled_skills/generate-notebook/: README.md  SKILL.md
varys/bundled_skills/load-dataframe/: README.md  SKILL.md
varys/bundled_skills/notebook-annotation/: README.md  SKILL.md
varys/bundled_skills/notebook-code-review/: README.md  SKILL.md
varys/completion/: __init__.py  cache.py  engine.py
varys/context/: __init__.py  assembler.py  scorer.py  scorer_log.py  summarizer.py  summary_store.py
varys/handlers/: __init__.py  auto_tag.py  bundled_skills.py  cell_executed.py  cell_lifecycle.py  chat_history.py  complete.py  health.py  magic_task.py  mcp_handler.py  ollama.py  rag.py  report.py  settings.py  skills.py  symbols.py  task.py  wiki.py
varys/labextension/: build_log.json  package.json
varys/llm/: anthropic_provider.py  azure_provider.py  base.py  bedrock_provider.py  client.py  context_utils.py  factory.py  google_provider.py  ollama_provider.py  openai_provider.py  openrouter_provider.py
varys/mcp/: __init__.py  config.py  manager.py  server.py
varys/memory/: confidence.py  inference.py  injection.py  manager.py  preference_store.py
varys/rag/: __init__.py  chunker.py  manager.py  store.py
varys/report/: generator.py  image_extractor.py  notebook_parser.py
varys/skills/: __init__.py  loader.py
varys/tags/: __init__.py  library.yaml
varys/utils/: config.py  paths.py
(+320 files in other folders)
